--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 html{
-    background: #e3e3e3;
+    background: #dde6d9;
 }
+img{
+    max-width: 50%;
+    height: auto;
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 40px;
