--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header{
 section {
     background: #c9c8c8;
     border-radius: 15px;
+    padding: 5px;
 
 }
 
@@ -32,7 +33,7 @@ article {
 
 h1{
     font-size: 3em;
-    margin: 0;
+    margin: 0px;
 }
 
 
@@ -54,12 +55,24 @@ p{
 
 }
 
+.navigation{
+    width: 120px;
+    background: #dde6d9;
+    padding: 5px;
+    margin: 10px;
+    position: sticky;
+    left: 0px;
+    top: 50px;
+    height: 100px;
+    z-index: 100;
+}
+
 #Newsletter {
     background: #dde6d9;
     padding: 10px;
-    margins: 0px;
+    margin: 0px;
     position: sticky;
-    top: 0;
+    top: 0px;
 }
 
 .profile{
@@ -70,7 +83,8 @@ p{
     transition: all ease-in-out;
     float: left;
     margin: 10px;
-    margin-top: 30px;
+    margin-top: 35px;
+    margin-left: 25px;
 }
 .camera{
     border-radius: 15px;
@@ -87,14 +101,7 @@ p{
     transition: all ease-in-out;
 }
 
-#navigation{
-    width: 120px;
-    background: #dde6d9;
-    padding: 5px;
-    position: sticky;
-    top: 0;
-    right: 0;
-}
+
 
 #Contact{ 
     padding-left: 10px;
