--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 header{
     background: #f6f4f4;
     text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 section {
@@ -37,7 +38,6 @@ h1{
 }
 
 
-
 p{
     line-height: 1.4em;
 }
@@ -55,17 +55,7 @@ p{
 
 }
 
-.navigation{
-    width: 120px;
-    background: #dde6d9;
-    padding: 5px;
-    margin: 10px;
-    position: sticky;
-    left: 0px;
-    top: 50px;
-    height: 100px;
-    z-index: 100;
-}
+
 
 #Newsletter {
     background: #dde6d9;
@@ -107,4 +97,26 @@ p{
     padding-left: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.navigation{
+    width: 120px;
+    background: #dde6d9;
+    padding: 5px;
+    margin: 10px;
+    position: sticky;
+    left: 0px;
+    top: 30px;
+    height: 100px;
+    z-index: 100;
+}
+
+.author{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif  
+}
+
+.hobbies{
+    background: #c9c8c8;
+    border-radius: 15px;
+    padding: 5px;
 }
